[fix] - improving styles on small windows

--- a/src/app/shared/scss/app.scss
+++ b/src/app/shared/scss/app.scss
@@ -3,7 +3,7 @@
     font-family: "Montserrat", sans-serif;
     .app__page {
         display: flex;
-        height: 100vh;
+        min-height: 100vh;
         width: 100%;
     }
 }
