--- a/src/app/shared/scss/dialog.scss
+++ b/src/app/shared/scss/dialog.scss
@@ -4,7 +4,7 @@
 
 .form__body {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-evenly;
@@ -12,6 +12,8 @@
 
 .form__row {
     display: flex;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .form__field {
@@ -23,6 +25,7 @@
     align-items: center;
     margin-bottom: 20px;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .form__actions-button {
@@ -40,5 +43,8 @@
         justify-content: center;
         align-items: center;
         flex-direction: column;
+    }
+    .form__actions-button {
+        width: 100%;
     }
 }
