--- a/src/app/shared/scss/sidebar.scss
+++ b/src/app/shared/scss/sidebar.scss
@@ -2,7 +2,7 @@
     width: 15%;
     margin-top: 90px;
     box-shadow: $shadow-15;
-    height: 100vh;
+    min-height: 100vh;
     transition:
         width 0.3s ease,
         opacity 0.3s ease;
